<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_cardBackgroundColor"
    app:cardCornerRadius="17.5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/company_logo"
            android:layout_width="75dp"
            android:layout_height="90dp"
            android:background="#727272"
            android:contentDescription="@string/company_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/company_name_example"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/company_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_ticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_ticker_example"
            android:textColor="@color/text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/company_name"
            app:layout_constraintTop_toBottomOf="@id/company_name" />

        <TextView
            android:id="@+id/company_analysis_info_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_date_example"
            android:textColor="@color/text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>